--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "uuidv4": "^6.2.13",
